techbooklabo_v-1.0/service/aws_lb.tf
resource "aws_lb" "lb" {
	name               = "techbooklabov1-lb"
	internal           = false
	load_balancer_type = "application"

	security_groups = [
		aws_security_group.alb_sg.id,
	]

	subnets = [
		data.terraform_remote_state.vpc.outputs.public_subnet_1_id,
		data.terraform_remote_state.vpc.outputs.public_subnet_2_id,
	]
}
